[package]
name = "cargo-tag"
version = "0.1.2"
edition = "2021"

license = "MIT"
description = "Cargo plugin to bump crate's versions and Git tag them for release"
keywords = ["cargo", "tag", "git", "release"]
categories = ["command-line-utilities", "development-tools"]
include = ["src", "README.md"]
homepage = "https://github.com/LeoBorai/cargo-tag"
documentation = "https://github.com/LeoBorai/cargo-tag"
repository = "https://github.com/LeoBorai/cargo-tag"
readme = "README.md"

[lib]
name = "cargo_tag"
path = "src/lib.rs"

[[bin]]
name = "cargo-tag"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
git2 = { version = "0.20" }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
toml_edit = "0.23"
